<resources>
    <string name="app_name">TheReceiptBook</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="profile_image">Profile</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="records">Records</string>
    <string name="sales">Sales</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="give_us_feedback">Give us a feedback</string>
    <string name="user_image">User Image</string>
    <string name="nav_open_drawer">open</string>
    <string name="nav_close_drawer">close</string>
    <string name="inbox">Inbox</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="already_registered">Not registered ?</string>
    <string name="sign_in">Sign In</string>
    <string name="buy_receipt">Buy Page</string>
    <string name="page_number_available">20</string>
    <string name="purchase_icon_message">Purchase receipt pages</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="company">Company</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="customer_name">Customer\'s Name</string>
    <string name="customer_phone_number">Customer\'s Phone Number</string>
    <string name="purchased_items">Purchase Item</string>
    <string name="amount_ghs">Amount</string>
    <string name="issue">ISSUE</string>
    <string name="issue_receipt">Issue Receipt</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="time">Time</string>
    <string name="dummy_text">Name Surname Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</string>
    <string name="api_key">fd68e6c4a32df597c96a54f9306375b1</string>
    <string name="web_service_url">http://api.openweathermap.org/data/2.5/weather/?q=</string>
    <string name="read_error">Unable to read weather data</string>
    <string name="connect_error">Unable to connect to OpenWeatherMap.org</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="humidity_57">Humidity: %s</string>
    <string name="pressure_1015_hpa">Pressure: %s hPa</string>
    <string name="wind_14_km_h_sse">Wind: %s km/h SSE</string>
    <string name="feels_like">Feels Like : %s</string>
    <string name="company_giant_inc"><b>Company :</b> %s</string>
    <string name="total_number_of_receipt_issued_"><b>Total Number Of Receipt Issued :</b> %s</string>
    <string name="total_number_of_items_sold"><b>Total Number Of Items Sold :</b> %s</string>
    <string name="total_amount_made"><b>Total Amount Made :</b> %s</string>
    <string name="item_with_most_receipt"><b>Item With Most Receipt :</b> %s</string>
    <string name="image_of_the_cloud">image of the cloud</string>
    <string name="Enter_PhoneNumber_info">KnowHouse will send an SMS message to verify our phone number</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verify">Verify</string>
    <string name="verfication_dialog_title">Phone Number Verification</string>
    <string name="sender_company">Company</string>
</resources>
