<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.knowhouse.thereceiptbook.MainActivity">

    <item
        android:id="@+id/receipt_pages"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title="@string/page_number_available"/>

    <item android:id="@+id/user_profile_image"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:title="@string/profile_image"
        android:icon="@drawable/people" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item android:id="@+id/logging_out"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/logout"/>
</menu>
