<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/inbox_card_view"
    card_view:contentPadding="10dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="6dp"
    card_view:cardBackgroundColor="@color/splash_back_color"
    card_view:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/issue_registry">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/profile_image"
            android:src="@drawable/people"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_full_name"
            android:layout_toEndOf="@id/profile_image"
            android:text="@string/full_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/user_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_image"
            android:layout_below="@id/user_full_name"
            android:text="@string/phone_number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/user_phone_number"
            android:id="@+id/time_of_issue"
            android:layout_below="@id/user_full_name"
            android:layout_marginStart="5dp"
            android:text="@string/time"/>

        <TextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_of_issue"
            android:layout_alignStart="@id/user_phone_number"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/dummy_text"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>