<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/splash_back_color"
    app:contentPadding="5dp">


    <LinearLayout
        android:id="@+id/parentLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/weatherDataLeft"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weatherDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=""
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:id="@+id/weatherTown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=""
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/weatherHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/humidity_57" />

            <TextView
                android:id="@+id/weatherPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/pressure_1015_hpa" />

            <TextView
                android:id="@+id/weatherWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/wind_14_km_h_sse" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weatherDataRight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/weatherIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/image_of_the_cloud"/>

            <TextView
                android:id="@+id/weatherTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:text=""/>

            <TextView
                android:id="@+id/weatherFeelsLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feels_like"/>

            <TextView
                android:id="@+id/weatherCloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text=""/>
        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>